# NEoN

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: activation_function.cpp  activation_function.h  error_function.cpp  error_function.h  layer.cpp  layer.h  matrix.h  network.cpp  network.h  neuron.cpp  neuron.h
core/gui/: pom.xml
core/gui/src/main/java/it/cnr/istc/pst/neon/: App.java
core/listeners/: network_listener.h  socket_listener.cpp  socket_listener.h
core/tests/: CMakeLists.txt  test0.cpp  test1.cpp
nn/: activation_f.cpp  activation_f.h  error_f.cpp  error_f.h  network.cpp  network.h
nn/tests/: CMakeLists.txt  test0.cpp  test1.cpp
